提交代码V1.0，更新页面样式

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,7 +32,7 @@
 						通过智能合约交易触发，棋牌排序将被记录在区块链浏览器上，并永不可更改；牌局结束后，应用发起者或参与者通过合约交易公布牌序。</span><br />
                     <span>当前市面上互联网竞猜平台所采用的都是中心化的商业模式—由机构或某个公司运营，这意味着参与竞猜的用户可能会出现吃票、黑彩、作假，游戏规则不透明等暗箱操作手段让广大用户担心。</span><br />
                     <span>此DAPP继承了区块链技术的特点和优点，它将完美解决当前竞猜行业的不合理之处：包括传统竞猜平台饱受诟病的低额回报率；可供参与竞猜的产品匮乏；传统竞猜平台运营的不公开不透明、法律风险、资金安全问题以及对运营者作弊行为的疑虑等等。</span> 
-                    <a class="btn" href='./record.html'><img src="img/btn_2.png"/></a>
+                    <a class="btn" href='./record'><img src="img/btn_2.png"/></a>
 				</div>	
 			</div>
 			<div class="process">
